Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -366,7 +366,7 @@
         "\n",
         "따라서,\n",
         "$$\n",
-        "    H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}c_{{ \\mathbf k + \\mathbf Q },\\sigma}\n",
+        "    \\left. H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}c_{{ \\mathbf k + \\mathbf Q },\\sigma}\\right.\\tag{3.51}\n",
         "$$\n",
         "Since $E(\\mathbf k) = E ({\\mathbf k +\\mathbf Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n"
       ],
@@ -1424,7 +1424,10 @@
       "source": [
         "## 고온에서의 전자의 입자 모델  \n",
         "\n",
-        "![https://www.saburchill.com/physics/chapters/0037.html](https://www.saburchill.com/physics/images_EM/conduction_metals_03.jpg)\n",
+        "![page-2-html-bg-c6beff77b731db3c9af8ae10917ec8476c45665e](https://github.com/shevious/etc/assets/38934308/dac3f24f-5ee7-487a-be50-a32fa7820273)\n",
+        "\n",
+        "https://www.coursehero.com/file/200579828/PhaseII-Phy-L3-BatteriesBulbs-StudentNotesdoc/\n",
+        "https://web.archive.org/web/20190721062302/http://www.saburchill.com/physics/chapters/0037.html\n",
         "\n",
         "고온에서의 전자는 lattice 자체와의 interaction으로 momentum이 변화되는 scattering을 겪는다. impurity나 crystal disorder도 마찬가지이다. 이렇게 변화된 전자의 momentum은 conductivity의 저항으로 작용한다.  \n",
         "\n",
@@ -1510,9 +1513,7 @@
         "\n",
         "[^solyom]:  Sólyom Ch 34.\n",
         "    $$ \\left.\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\right. \\tag{34.2.41}\n",
-        "    $$\n",
-        "\n",
-        "abc 5"
+        "    $$\n"
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
