Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1684,9 +1684,11 @@
         "## electron-electron scattering  \n",
         "\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "E = E_0+\\langle\\psi_0|H_I|\\psi_0\\rangle+\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle\\\\\n",
         "+\\langle\\psi_0|H_I{1\\over E_0-H_0}H_I{1\\over E_0-H_0}H_I|\\psi_0\\rangle\n",
         "+\\cdots\n",
+        "\\end{gather*}\n",
         "$$\n",
         "\n",
         "ref: MFYS - 2001WETSSP - Solid_State_Physics.pdf\n",
@@ -1695,6 +1697,7 @@
         "\n",
         "Second order:  \n",
         "$$\n",
+        "\\begin{gather*}\n",
         "E_2 = \\sum_{\\bf k,k',q,q',\\sigma,\\sigma'}W_{\\bf q}W_{\\bf q'}\\langle0|\n",
         "c^\\dagger_{\\bf k'\\sigma'}c_{\\bf k'+q',\\sigma'}\n",
         "c^\\dagger_{\\bf k+q,\\sigma}c_{\\bf k,\\sigma}\\\\\n",
@@ -1709,9 +1712,10 @@
         "{c^\\dagger_{\\bf k'-q,\\sigma'}c_{\\bf k'\\sigma'}\n",
         "c^\\dagger_{\\bf k+q,\\sigma}c_{\\bf k\\sigma}\n",
         "\\over E_{\\bf k} -(E_{\\bf k+q}-\\hbar\\omega_{\\bf q})}\n",
-        "\\right]$$\n",
+        "\\right] \\end{gather*}$$\n",
         "Convert $q \\to -q$ of right term, ( $\\omega_{-q} = \\omega_q$ )\n",
         "$$\n",
+        "\\begin{gather*}\n",
         "=\\sum_{\\bf k,k',q,\\sigma,\\sigma'}|W_{\\bf q}|^2\n",
         "\\left[\n",
         "{c^\\dagger_{\\bf k'+q,\\sigma'}c_{\\bf k'\\sigma'}\n",
@@ -1728,6 +1732,7 @@
         "{2\\hbar\\omega_{\\bf q}\n",
         "\\over (E_{\\bf k} -E_{\\bf k-q})^2-(\\hbar\\omega_{\\bf q})^2}\n",
         "\\right]\n",
+        "\\end{gather*}\n",
         "$$\n",
         "\n",
         "Why ${1\\over E_0-H_0}$ is applied only to $k$ and not to $k'$?\n",
