--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -345,30 +345,23 @@
         "[^Marino]: Marino - Quantum Field Theory Approach to Condensed Matter Physics\n",
         "\n",
         "[^Marino2]: Marino - Volume3   \n",
-        "\n",
-        "**Marino2 참고**\n",
-        "\n",
-        "Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
-        "Confusing!  \n",
-        "Just use (3.12), (3.13)  \n",
-        "First term (electron propagation term:\n",
-        "\n",
-        "$$\n",
+        "    Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
+        "    Confusing!  \n",
+        "    Just use (3.12), (3.13)  \n",
+        "    First term (electron propagation term:\n",
+        "    $$\n",
         "    H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
         "    \\int d^3xe^{i\\bf (k'-k)\\cdot x}{1\\over N} \\sum_RV({\\bf x-R})\n",
-        "$$\n",
-        "\n",
-        "여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.\n",
-        "\n",
-        "$$\n",
-        "\\mathbf{k}' - \\mathbf{k} = \\mathbf{Q}\\tag{3.50}\n",
-        "$$\n",
-        "\n",
-        "따라서,\n",
-        "$$\n",
+        "    $$\n",
+        "    여기서 lattice 구조에 의해 두 momentum의 차이는 reciprocal vector $\\mathbf Q$와 같다.\n",
+        "    $$\n",
+        "    \\left.\\mathbf{k}' - \\mathbf{k} = \\mathbf{Q}\\right.\\tag{3.50}\n",
+        "    $$\n",
+        "    따라서,\n",
+        "    $$\n",
         "    \\left. H_e=\\sum_{\\mathbf Q,\\mathbf k,\\sigma}{V( {\\bf Q})c^\\dagger_{\\mathbf k \\sigma}}c_{{ \\mathbf k + \\mathbf Q },\\sigma}\\right.\\tag{3.51}\n",
-        "$$\n",
-        "Since $E(\\mathbf k) = E ({\\mathbf k +\\mathbf Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n"
+        "    $$\n",
+        "    Since $E(\\mathbf k) = E ({\\mathbf k +\\mathbf Q})$, according to the Bloch theorem, this means the scattered electron will have the same energy it has before the scattering. On the other hand, physical momenta corresponding to wave-vectors satisfying the relation (3.50) are precisely the same. Hence we can now completely understand why an electron in a Bravais lattice propagates without being scattered: its momentum and energy simply are not changed as it propagates.  \n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
